Fixed some things that weren't centered when they should be. Changed min-width on paired buttons so the text wouldn't move outside of the button as the window is horizontally shrunk or on smaller displays.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,9 +122,10 @@ https://kuler.adobe.com/create/color-wheel/?base=2&rule=Complementary&selected=4
     display: none;
 }
 
-.paired{
+.paired {
     width: 49%;
-    min-width:100px;
+    min-width:150px;
+    margin-top: 5px;
 }
 
 .right .title {
